<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="358dp">

                <ImageView
                    android:id="@+id/img_cook"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/img_cook" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/icon_back" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_gravity="end">

                        <ImageView
                            android:id="@+id/imageView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/icon_share"
                            android:layout_marginRight="15dp"/>

                        <ImageView
                            android:id="@+id/imageView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/icon_heart" />
                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/style_nearest_available"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="17dp">

                    <TextView
                        android:id="@+id/nearest_available"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nearest_available"
                        android:textSize="14dp"
                        android:fontFamily="@font/inter_medium"
                        android:textColor="@color/white"
                        android:layout_margin="8dp"/>
                </FrameLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="15dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/cook_name"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cook_name_long"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:fontFamily="@font/inter_bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:orientation="horizontal"
                        android:layout_marginTop="6dp">

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/icon_star" />

                        <TextView
                            android:id="@+id/cook_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/cook_rating"
                            android:textColor="@color/black60"
                            android:textSize="14dp" />
                    </LinearLayout>

                </FrameLayout>

                <TextView
                    android:id="@+id/prices_from_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/prices_from_to"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/distance"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="16dp"
                        android:textColor="@color/black50" />
                    <TextView
                        android:id="@+id/separator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/separator"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="16dp"
                        android:textColor="@color/black50"
                        android:layout_marginHorizontal="3dp"/>
                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/address"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="16dp"
                        android:textColor="@color/black50" />
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/specifics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/style_specific">

                    <TextView
                        android:id="@+id/specifics_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/specifics"
                        android:fontFamily="@font/inter_regular"
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp"/>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/button_select_order_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:background="@drawable/style_button_switch_home_on">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_order_date"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:layout_marginVertical="12dp"
                        android:layout_gravity="center"/>
                </FrameLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="29dp">

                    <TextView
                        android:id="@+id/button_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/menu"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="16dp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/button_comments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="15dp"
                        android:text="@string/comments"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="16dp"
                        android:textColor="@color/black50"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_sections"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>