<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/style_button_switch_home"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <FrameLayout
                android:id="@+id/switch_on_cooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button_switch_home_on">

                <TextView
                    android:id="@+id/switch_on_cooks_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/str_btn_cooks"
                    android:textColor="@color/black"
                    android:textSize="16dp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/switch_on_kitchens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/switch_on_kitchens_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/str_btn_kitchens"
                    android:textColor="@color/black50"
                    android:textSize="16dp" />
            </FrameLayout>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/style_button_switch_home">

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/text_popular_cooks"
                android:textColor="@color/black"
                android:textSize="18dp" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="209dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/scroll_popular_cooks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </ScrollView>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp">

            <LinearLayout
                android:id="@+id/button_home_filter1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button_switch_home_on"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/home_filter1"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/icon_sort"
                    android:layout_gravity="center"
                    android:layout_marginEnd="12dp"/>
            </LinearLayout>
            <FrameLayout
                android:id="@+id/button_home_filter2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button_switch_home_on"
                android:layout_gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/home_filter2"
                    android:textColor="@color/black"
                    android:textSize="16dp" />
            </FrameLayout>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="8dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/scroll_all_cooks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>

        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>